[fix] Improved line highlight contrast

--- a/src/.vuepress/theme/styles/_config.scss
+++ b/src/.vuepress/theme/styles/_config.scss
@@ -66,8 +66,8 @@ $md-icon-padding: $ms-base * 0.5;
 $md-icon-margin: $ms-base * 0.25;
 
 // Code blocks
-$md-code-background: #083b4b;
-$md-code-background-highlighted: #002835;
+$md-code-background: $md-color-blue;
+$md-code-background-highlighted: #02171f;
 $md-code-color: #c2c6cf;
 
 // Keystrokes
