--- a/src/.vuepress/theme/styles/base/_typeset.scss
+++ b/src/.vuepress/theme/styles/base/_typeset.scss
@@ -188,7 +188,6 @@ kbd {
     $correct: 1 / 0.85;
     padding: 3px;
     border-radius: 0.2rem;
-    background-color: $md-code-background-inline;
     color: black;
     font-weight: normal;
     // Remove box-shadows for print
